--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
 
         <!-- 分页 -->
