--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
+#本地
+#jdbc.url=jdbc:mysql://localhost:3306/shopping?useUnicode=true&characterEncoding=utf8
+#jdbc.username=WnplV/ietfQ=
+#jdbc.password=HyQH1bD/jNs=
+
 #server
 server.port=8080
 server.servlet.context-path=/o2o
-
 #数据源
 jdbc.driver=com.mysql.jdbc.Driver
 #服务器
 jdbc.url=jdbc:mysql://47.93.193.94:3306/shopping?useUnicode=true&characterEncoding=utf8
 jdbc.username=zCKAAEaFQUI=
 jdbc.password=z92Fz8Su52IqMGDX4Lewpw==
-#本地
-#jdbc.url=jdbc:mysql://localhost:3306/shopping?useUnicode=true&characterEncoding=utf8
-#jdbc.username=WnplV/ietfQ=
-#jdbc.password=HyQH1bD/jNs=
-
 #Redis
 redis.hostname=47.93.193.94
 redis.port=6379
@@ -21,12 +20,10 @@ redis.pool.maxActive=100
 redis.pool.maxIdle=20
 redis.pool.maxWait=3000
 redis.pool.testOnBorrow=true
-
 #Mybatis
 mybatis_config_file=mybatis-config.xml
 mapper_path=/mapper/*.xml
 type_alias_package=com.changyue.o2o.entity
-
 #验证码
 kaptcha.border=no
 kaptcha.textproducer.font.color=black
@@ -37,3 +34,10 @@ kaptcha.textproducer.char.string=qazwsxedcrfvtgbyhnuj123456789
 kaptcha.textproducer.font.size=43
 kaptcha.noise.color=black
 kaptcha.textproducer.char.length=4
+#Path
+win.base.path=D:/projectdev/img
+liunx.base.path=/User/baidu/work/
+shop.base.path=/upload/item/shop/
+
+
+
