--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
             <version>5.0.0</version>
         </dependency>
 
+        <!-- google 二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
