"日销量统计-柱状图"

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
         </dependency>
 
 
+        <!--定时调度-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
